...
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/main_exhibits_recyclerView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/main_search_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_search_textView" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@id/main_getDirections_button"
        app:layout_constraintRight_toLeftOf="@+id/main_clear_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_exhibits_recyclerView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
...
