...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <CheckBox
        android:id="@+id/node_checkBox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="17sp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
...
