...
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/prev"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/direction_exit_button"
        app:layout_constraintTop_toBottomOf="@+id/direction_reycler_view" />

    <Button
        android:id="@+id/direction_exit_button"
        android:layout_width="70dp"
        android:layout_height="60dp"
...
