...
        android:layout_margin="16dp"
        android:text="@string/back"
        android:onClick="onBackClicked"
        app:layout_constraintTop_toBottomOf="@id/summary_RecyclerView"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/go_btn" />

    <Button
        android:id="@+id/go_btn"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
...
